--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
     </header>
     <main>
       <!--Hero-->
+
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
-      <!--What we do-->
+
+      <!--Our Skill-->
+
       <section>
+        <h2 class="visually-hidden">Наши качества</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -66,32 +70,39 @@
             </p>
           </li>
         </ul>
+      </section>
+
+      <!--What we do-->
+
+      <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
               src="./images/box1.jpg"
-              alt="Человек печатает на клавиатуре"
+              alt="Десктопные приложения"
               width="370"
             />
           </li>
           <li>
             <img
               src="./images/box2.jpg"
-              alt="Человек держит в руках телефон"
+              alt="Мобильные приложения"
               width="370"
             />
           </li>
           <li>
             <img
               src="./images/box3.jpg"
-              alt="Человек выбирает палитру цветов на планшете"
+              alt="Дизайнерские решения"
               width="370"
             />
           </li>
         </ul>
       </section>
+
       <!--Our Command-->
+
       <section>
         <h2>Наша команда</h2>
         <ul>
@@ -130,10 +141,12 @@
         </ul>
       </section>
     </main>
+
+    <!--Footer-->
     <footer>
       <a href="#">Web Studio</a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
-        <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
         <li><a href="mailto:info@example.com">info@example.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
